# piscine-python-DS

./: README.md
ex00/: Hello.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py
ex03/: NULL_not_found.py
ex04/: whatis.py
srcs/00/ex00/: Hello.py
srcs/00/ex01/: format_ft_time.py
srcs/00/ex03/: tester.py
srcs/00/ex04/: whatis.py
srcs/00/ex05/: building.py  tester.py
srcs/00/ex06/: filterstring.py  ft_filter.py  tester.py
srcs/00/ex07/: sos.py
srcs/00/ex08/: Loading.py  tester.py
srcs/00/ex09/: LICENSE  README.md  pyproject.toml
srcs/00/ex09/ft_package/: __init__.py
srcs/01/ex00/: give_bmi.py  tester.py
srcs/01/ex01/: array2D.py  tester.py
srcs/01/ex02/: tester.py
srcs/01/ex03/: load_image.py  zoom.py
srcs/01/ex04/: rotate.py
srcs/01/ex05/: load_image.py  pimp_image.py  tester.py
srcs/02/ex00/: tester.py
srcs/02/ex01/: aff_life.py  test.py
srcs/02/ex01/data/: .~lock.life_expectancy_years.csv#
srcs/02/ex02/: aff_pop.py  load_csv.py
srcs/02/ex03/: projection_life.py
srcs/03/ex00/: S1E9.py  tester.py
srcs/03/ex01/: S1E9.py
srcs/03/ex02/: DiamondTrap.py  S1E7.py
srcs/03/ex03/: ft_calculator.py  tester.py
srcs/03/ex04/: ft_calculator.py
srcs/04/ex00/: statistics.py
srcs/04/ex01/: in_out.py
srcs/04/ex02/: callLimit.py
srcs/04/ex03/: new_student.py  tester.py
utils/: test.py
