[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
    {name = "mleproux"}, {email = "mleproux@42.fr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = []

[project.urls]
homepage = "https://github.com/mleproux/ft_package"
